sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:11: error: not found: value smallest
    smallest = getValue(i+1)
    ^