sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var mem = 0
  for (i<-0 until getValueCount()-1){
    for (j<-i until getValueCount()){
      if (getValue(j)<getValue(mem)){
        mem = j
      }
    }
    swap(i,mem)
    smallest = getValue(i+1)
    mem = i+1
  }
}